IF( BUILD_CUDA )
   CUDA_ADD_EXECUTABLE( Expressions Expressions.cu )
   ADD_CUSTOM_COMMAND( COMMAND Expressions > ${TNL_DOCUMENTATION_OUTPUT_SNIPPETS_PATH}/Expressions.out OUTPUT ${TNL_DOCUMENTATION_OUTPUT_SNIPPETS_PATH}/Expressions.out )
   CUDA_ADD_EXECUTABLE( Reduction Reduction.cu )
   ADD_CUSTOM_COMMAND( COMMAND Reduction > ${TNL_DOCUMENTATION_OUTPUT_SNIPPETS_PATH}/Reduction.out OUTPUT ${TNL_DOCUMENTATION_OUTPUT_SNIPPETS_PATH}/Reduction.out )
   ADD_EXECUTABLE( StaticVectorExample StaticVectorExample.cpp )
   ADD_CUSTOM_COMMAND( COMMAND StaticVectorExample > ${TNL_DOCUMENTATION_OUTPUT_SNIPPETS_PATH}/StaticVectorExample.out OUTPUT ${TNL_DOCUMENTATION_OUTPUT_SNIPPETS_PATH}/StaticVectorExample.out )
ENDIF()

IF( BUILD_CUDA )
   ADD_CUSTOM_TARGET( TutorialsVectors-cuda ALL DEPENDS
      ${TNL_DOCUMENTATION_OUTPUT_SNIPPETS_PATH}/Expressions.out
      ${TNL_DOCUMENTATION_OUTPUT_SNIPPETS_PATH}/Reduction.out
      ${TNL_DOCUMENTATION_OUTPUT_SNIPPETS_PATH}/StaticVectorExample.out
   )
ENDIF()
